--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
    </header>
 
 
+      <div class="container">
+       <div class="row">
+         <section class="col-md-12" ui-view='content'></section>
+         <hr>
+       </div>
+     </div>
 
     <footer class="col-md-12">
       <p>INSTAGRAM</p>
